<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etCod"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="123dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/cod"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etValor"
        app:layout_constraintStart_toStartOf="@+id/etValor"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginBottom="65dp"
        android:ems="10"
        android:hint="@string/valor"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cbVIP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCod" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="215dp"
        android:text="@string/infoIngresso"
        app:layout_constraintBottom_toTopOf="@+id/etFuncao"
        app:layout_constraintEnd_toEndOf="@+id/etCod"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbVIP"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="368dp"
        android:text="@string/vip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etFuncao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <EditText
        android:id="@+id/etFuncao"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="@string/funcao"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cbVIP"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:layout_marginBottom="251dp"
        android:text="@string/comprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFuncao" />

</androidx.constraintlayout.widget.ConstraintLayout>